LPS-168928 portal-web: uses new Util class to get feature flags JSON

--- a/portal-web/docroot/html/common/themes/top_js.jspf
+++ b/portal-web/docroot/html/common/themes/top_js.jspf
@@ -152,11 +152,11 @@
 			};
 		})();
 
-		var featureFlags = <%= PropsValues.FEATURE_FLAGS_JSON %>;
+		var featureFlags = <%= FeatureFlagManagerUtil.getJSON(themeDisplay.getCompanyId()) %>;
 
 		Liferay.FeatureFlags = Object.keys(featureFlags).reduce(
 			(acc, key) => ({
-				...acc, [key]: featureFlags[key] === 'true'
+				...acc, [key]: featureFlags[key] === 'true' || featureFlags[key] === true
 			}), {}
 		);
 
