--- a/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/META-INF/resources/admin/css/_admin.scss
+++ b/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/META-INF/resources/admin/css/_admin.scss
@@ -226,4 +226,12 @@ $toolbarZIndex: 971;
 	.lfr-search-container-wrapper .list-group .list-group-item h2.h5 {
 		font-weight: 600;
 	}
+
+	.management-bar .nav-item {
+		padding: 0 0.25rem;
+
+		&:last-child {
+			padding-right: 0;
+		}
+	}
 }
