LPS-170807 Updated compare runs card and feature to filter results by run

--- a/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/_liferay.scss
+++ b/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/_liferay.scss
@@ -9,7 +9,14 @@
 	padding: 0;
 }
 
+.popover {
+	max-width: 900px !important;
+	width: 480px !important;
+	z-index: 99;
+}
+
 .compare-runs-popover {
+	top: 210px !important;
 	z-index: 98;
 }
 
