--- a/modules/apps/layout/layout-type-controller/layout-type-controller-panel/src/main/resources/META-INF/resources/layout/view/panel_description.jspf
+++ b/modules/apps/layout/layout-type-controller/layout-type-controller-panel/src/main/resources/META-INF/resources/layout/view/panel_description.jspf
@@ -36,7 +36,7 @@ if (themeDisplay.isStatePopUp() || layoutTypePortlet.hasStateMax()) {
 	}
 
 	if (Validator.isNotNull(templateContent)) {
-		RuntimePageUtil.processTemplate(request, response, ppid, new StringTemplateResource(templateId, templateContent), langType);
+		RuntimePageUtil.processTemplate(request, response, ppid, templateId, templateContent, langType);
 	}
 }
 else {
