--- a/modules/apps/analytics/analytics-settings-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/analytics/analytics-settings-web/src/main/resources/META-INF/resources/css/main.scss
@@ -65,11 +65,11 @@
 	top: 0;
 }
 
-.table-autofit td,
-.table-autofit th {
+.compose-table.table-autofit td,
+.compose-table.table-autofit th {
 	width: auto;
 }
 
-.table thead tr td {
+.compose-table.table thead tr td {
 	width: 40px;
 }
