LPS-170810 CompareRunsFloatingBox created and placed on sidebar

--- a/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/index.scss
+++ b/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/index.scss
@@ -12,6 +12,7 @@ liferay-remote-app-testray {
 	@import 'components/breadcrumb_finder';
 	@import 'components/chart';
 	@import 'components/code';
+	@import 'components/compare_runs_card';
 	@import 'components/export_case';
 	@import 'components/floating_box';
 	@import 'components/layout';
