--- a/modules/apps/analytics/analytics-settings-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/analytics/analytics-settings-web/src/main/resources/META-INF/resources/css/main.scss
@@ -74,13 +74,13 @@
 	top: 0;
 }
 
+.table-list.table-hover tbody tr.table-hover-disabled:hover td {
+	color: #a7a9bc;
+}
+
 .table-list.table-hover
 	tbody
 	tr.table-hover-disabled:not(.table-active):hover
 	td {
-	background-color: #ffffff;
-}
-
-.table-list.table-hover tbody tr.table-hover-disabled:hover td {
-	color: #a7a9bc;
+	background-color: #fff;
 }
