LPS-170346 Do not display the link element when the description is empty

--- a/modules/apps/user-groups-admin/user-groups-admin-web/src/main/resources/META-INF/resources/search_columns.jspf
+++ b/modules/apps/user-groups-admin/user-groups-admin-web/src/main/resources/META-INF/resources/search_columns.jspf
@@ -53,7 +53,7 @@
 
 		<liferay-ui:search-container-column-text
 			cssClass="table-cell-expand table-cell-minw-300"
-			href="<%= rowURL %>"
+			href="<%= Validator.isNull(userGroup.getDescription()) ? StringPool.BLANK : rowURL %>"
 			name="description"
 			orderable="<%= true %>"
 			property="description"
