--- a/modules/apps/product-navigation/product-navigation-product-menu-web/src/main/resources/com/liferay/product/navigation/product/menu/web/internal/product/navigation/control/menu/icon.tmpl
+++ b/modules/apps/product-navigation/product-navigation-product-menu-web/src/main/resources/com/liferay/product/navigation/product/menu/web/internal/product/navigation/control/menu/icon.tmpl
@@ -1,5 +1,5 @@
 <li class="control-menu-nav-item ${cssClass}" role="tablist">
-	<button aria-controls="${portletNamespace}sidenavSliderId" aria-label="${title}" aria-selected="${isOpen}" class="control-menu-icon lfr-portal-tooltip product-menu-toast-toggle product-menu-toggle sidenav-toggler" data-content="body" data-open-class="open product-menu-open" data-qa-id="productMenu" data-skip-link-label="${skipLinkLabel}" data-target="#${portletNamespace}sidenavSliderId" data-title="${title}" data-toggle="liferay-sidenav" data-type="fixed-push" data-type-mobile="fixed" ${dataURL} id="${portletNamespace}sidenavToggleId" role="tab">
+	<button aria-controls="${portletNamespace}sidenavSliderId" aria-label="${title}" aria-selected="${isOpen}" class="control-menu-icon lfr-portal-tooltip product-menu-toast-toggle product-menu-toggle sidenav-toggler" data-content="body" data-open-class="open product-menu-open" data-qa-id="productMenu"  data-target="#${portletNamespace}sidenavSliderId" data-title="${title}" data-toggle="liferay-sidenav" data-type="fixed-push" data-type-mobile="fixed" ${dataURL} id="${portletNamespace}sidenavToggleId" role="tab">
 		${closedIcon}
 
 		${openIcon}
