--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/src/mdf-request-detail-collection/fragments/mdf-request-manager-status/index.html
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/src/mdf-request-detail-collection/fragments/mdf-request-manager-status/index.html
@@ -1,3 +1,7 @@
+<div>
+	<p class="mb-2 text-neutral-7 text-paragraph" id="mdf-request-status-display"></p>
+</div>
+
 [#assign userRoles = permissionChecker.getUserBag().getRoles()/]
 
 [#assign approvedRoles =[""] /]
