LPS-169503 Make copy modal smaller

--- a/modules/apps/product-navigation/product-navigation-product-menu-web/src/main/resources/META-INF/resources/css/_PagesTree.scss
+++ b/modules/apps/product-navigation/product-navigation-product-menu-web/src/main/resources/META-INF/resources/css/_PagesTree.scss
@@ -4,6 +4,12 @@ $product-menu-pages-administration-link-height: 72px;
 
 html#{$cadmin-selector} {
 	.cadmin {
+		&.copy-page-modal {
+			.modal-content {
+				min-height: 344px;
+			}
+		}
+
 		.pages-tree {
 			margin-bottom: calc(
 				#{$product-menu-pages-administration-link-height} + #{$cadmin-spacer}
