--- a/modules/apps/item-selector/item-selector-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/item-selector/item-selector-web/src/main/resources/META-INF/resources/css/main.scss
@@ -1,5 +1,11 @@
 @import 'atlas-variables';
 
-.portlet-item-selector .management-bar {
-	border-bottom-color: $secondary-l3;
+.portlet-item-selector {
+	.management-bar {
+		border-bottom-color: $secondary-l3;
+	}
+
+	.item-selector .entry-selector {
+		cursor: pointer;
+	}
 }
