LPS-167644 Rename content welcome banner

--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/src/partner-portal/fragments/content-welcome-banner/index.html
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/src/partner-portal/fragments/content-welcome-banner/index.html
@@ -4,7 +4,7 @@
 	</button>
 </div>
 
-<div class="align-items-center bg-neutral-1 d-lg-flex pre-dismiss p-4 rounded-xl">
+<div class="align-items-center bg-neutral-1 d-lg-flex p-4 pre-dismiss rounded-xl">
 	<div class="col">
 		<h1 data-lfr-editable-id="first-welcome-banner-title" data-lfr-editable-type="rich-text">
 			This is editable text!
@@ -15,15 +15,17 @@
 		</p>
 
 		<div class="d-sm-flex">
-			<button class="btn btn-primary d-flex video-tour-button mr-3 mb-2">
+			<button class="btn btn-primary d-flex mb-2 mr-3 video-tour-button">
 				<lfr-drop-zone></lfr-drop-zone>
 				<div class="ml-1" data-lfr-editable-id="first-banner-primary-button-text" data-lfr-editable-type="rich-text">
 					This is editable text!
 				</div>
 			</button>
-			<lfr-drop-zone ></lfr-drop-zone>		
+
+			<lfr-drop-zone></lfr-drop-zone>
 		</div>
 	</div>
+
 	<div class="col">
 		<lfr-drop-zone></lfr-drop-zone>
 	</div>
@@ -36,13 +38,14 @@
 		</h1>
 	</div>
 
-	<div class="col d-sm-flex my-4 justify-content-lg-end">
+	<div class="col d-sm-flex justify-content-lg-end my-4">
 		<button class="border-brand-primary btn btn-secondary d-flex text-brand-primary video-tour-button  mr-3 mb-2">
 		<lfr-drop-zone></lfr-drop-zone>
 			<div class="ml-1" data-lfr-editable-id="second-banner-primary-button-text" data-lfr-editable-type="rich-text">
 				This is editable text!
 			</div>
 		</button>
-		<lfr-drop-zone ></lfr-drop-zone>
+
+		<lfr-drop-zone></lfr-drop-zone>
 	</div>
 </div>
