--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_NetworkstatusBar.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_NetworkstatusBar.scss
@@ -3,13 +3,7 @@
 html#{$cadmin-selector} {
 	.cadmin {
 		.page-editor__status-bar {
-			font-size: 0.875rem;
-			font-weight: 600;
-
-			& + .lexicon-icon {
-				font-size: 0.875rem;
-				margin-top: 2px;
-			}
+			min-width: 1rem;
 		}
 	}
 }
