LPS-171915 Create Notification popover

--- a/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/index.scss
+++ b/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/index.scss
@@ -16,6 +16,7 @@ liferay-remote-app-testray {
 	@import 'components/export_case';
 	@import 'components/floating_box';
 	@import 'components/layout';
+	@import 'components/layout/notification_popover';
 	@import 'components/layout/sidebar_task';
 	@import 'components/progress_bar';
 	@import 'components/table';
