ISSITES-5302 Add flexmark admonition css

--- a/workspaces/liferay-learn-workspace/client-extensions/liferay-learn-theme-css/src/css/_custom.scss
+++ b/workspaces/liferay-learn-workspace/client-extensions/liferay-learn-theme-css/src/css/_custom.scss
@@ -24,6 +24,7 @@
 @import 'clay/components/_tables';
 
 // Custom Components
+@import 'flexmark-ext-admonition/admonition';
 
 @import '_404';
 @import '_admonition';
