LPS-171914 Use REST and Fetch with new API

--- a/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/components/layout/_sidebar.scss
+++ b/modules/apps/site-initializer/site-initializer-testray/site-initializer-testray/extra/remote-app/src/styles/components/layout/_sidebar.scss
@@ -1,4 +1,4 @@
-$hover-transition-width: all 0.3s ease;
+$hover-transition-width: width 0.3s ease;
 $hover-transition: all 0.3s ease;
 $normal-transition-width: all 0.3s ease;
 $normal-transition: all 0.3s ease;
