LPS-79812 add validation in number fields

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/css/main.scss
@@ -4,6 +4,10 @@
 	display: none;
 }
 
+.text-cell-editor-hidden {
+	display: none;
+}
+
 .portlet-content-container {
 	.button-holder {
 		margin-top: 1em;
