LPS-164491 Set fixed position

--- a/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/META-INF/resources/admin/css/_admin.scss
+++ b/modules/apps/knowledge-base/knowledge-base-web/src/main/resources/META-INF/resources/admin/css/_admin.scss
@@ -16,8 +16,7 @@ $toolbarZIndex: 971;
 		}
 	}
 	.knowledge-base-vertical-bar {
-		position: relative;
-		z-index: 1;
+		position: fixed;
 
 		> div {
 			height: 100%;
