LPS-126754 manually setting the tab style

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/css/main.scss
@@ -219,6 +219,16 @@
 	}
 }
 
+.tab-selected .tab-content {
+	color: #272833;
+
+	&::after {
+		background-color: #80acff;
+		content: '';
+		height: 0.125rem;
+	}
+}
+
 textarea.script {
 	min-height: 200px !important;
 }
