--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/form_builder.jspf
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-web/src/main/resources/META-INF/resources/form_builder.jspf
@@ -70,12 +70,12 @@ if (Validator.isNotNull(script)) {
 						<div class="tabbable-content">
 							<ul class="lfr-nav nav nav-underline">
 								<li class="nav-item">
-									<a class="active nav-link" href="javascript:void(0);">
+									<a class="nav-link" href="javascript:void(0);">
 										<liferay-ui:message key="fields" />
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="disabled nav-link" href="javascript:void(0);">
+									<a class="nav-link" href="javascript:void(0);">
 										<liferay-ui:message key="settings" />
 									</a>
 								</li>
