--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/src/mdf-claim-detail-collection/fragments/mdf-claim-details-summary/index.html
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/src/mdf-claim-detail-collection/fragments/mdf-claim-details-summary/index.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-around">
+<div class="d-sm-flex justify-content-around">
 	<div class="align-items-center d-flex flex-column text-paragraph">
 		<p class="text-neutral-8">Type</p>
 		<p class="font-weight-bold text-neutral-9" id="mdf-claim-type"></p>
