--- a/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/src/mdf-request-detail-collection/fragments/mdf-request-details-summary/index.html
+++ b/modules/dxp/apps/osb/osb-site-initializer/osb-site-initializer-partner-portal/src/main/resources/site-initializer/fragments/group/src/mdf-request-detail-collection/fragments/mdf-request-details-summary/index.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-around">
+<div class="d-sm-flex justify-content-around">
 	<div class="align-items-center d-flex flex-column text-paragraph">
 		<p class="text-neutral-8">Funding Periods</p>
 	<p class="font-weight-bold text-neutral-9" id="mdf-request-date-field"></p>
